# green-integrals

./: .gitignore  CMakeLists.txt
.github/workflows/: test.yaml
src/: CMakeLists.txt  buffer.cpp  chunk_reader.cpp  reader.cpp
src/green/integrals/: common_defs.h  common_defs_e.h  df_buffered_reader.h  df_integral_t.h  except.h
src/green/integrals/buffered_reader/: access_counter.hpp  buffer.hpp  chunk_reader.hpp  shared_memory_region.hpp
test/: CMakeLists.txt  test_access_counter.cpp  test_age_out_buffer.cpp  test_buffer.cpp  test_bufferedSI.cpp  test_chunk_reader.cpp  test_hash.cpp  test_main.cpp  test_mpi.cpp  test_shared_memory_region.cpp
